# dispatch-horizon

./: MANIFEST.in  README.md  README.rst  setup.cfg
dispatch/dispatch/connect/: panel.py  tests.py  urls.py  views.py
dispatch/dispatch/connect/templates/connect/: index.html
dispatch/dispatch/overv/: urls.py
dispatch/dispatch/static/dashboard/dispatch/: dispatch.comService.js  dispatch.module.js  dispatch.resizeDirective.js  dispatch.scss  dispatch.scss.min
dispatch/dispatch/static/dashboard/dispatch/connect/: connect.controller.js  connect.html  connect.module.js
dispatch/dispatch/static/dashboard/dispatch/overv/: overview.controller.js
dispatch/dispatch/static/dashboard/dispatch/topology/: titleCellTemplate.html  titleHeaderCellTemplate.html  topology.controller.js  topology.module.js
dispatch/dispatch/topology/: urls.py
dispatch/enabled/: _4000_dispatch.py  _4030_dispatch_overv_panel.py  _4050_dispatch_topology_panel.py
