[metadata]
name = dispatch
summary = Qpid Dispatch Router plugin for OpenStack Dashboard
description-file =
    README.rst
author = Ernest Allen
author_email = eallen@redhat.com
home-page = http://docs.openstack.org/developer/horizon/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    dispatch

